added sign in & sign out functionality

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_core: ^2.25.3
   firebase_auth: ^4.17.3
   cloud_firestore: ^4.15.3
+  logger: ^2.0.2+1
 
 dev_dependencies:
   flutter_test:
